--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
- <h1>on new branch</h1>   
+ <div>
+     <h1>Tribute Page</h1>
+ </div> 
 </body>
 </html>
