--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link href="style.css" type="text/css" rel="stylesheet">
 </head>
 <body>
- <div>
-     <h1>Tribute Page</h1>
+ <div id="main">
+     <h1 id="title">Tribute Page</h1>
  </div> 
 </body>
 </html>
