--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
  <div id="main">
-     <h1 id="title">Tribute Page</h1>
+     <h1 id="title">Hector Lavoe</h1>
  </div> 
 </body>
 </html>
