--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
  <div id="main">
      <h1 id="title">Hector Lavoe</h1>
+     <div id="img-div">
+         <img src="https://en.wikipedia.org/wiki/H%C3%A9ctor_Lavoe" alt="hector lavoe photo">
+
+     </div>
  </div> 
 </body>
 </html>
