--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <div id="main">
      <h1 id="title">Hector Lavoe</h1>
      <div id="img-div">
-         <img src="https://en.wikipedia.org/wiki/H%C3%A9ctor_Lavoe" alt="hector lavoe photo">
+         <img src="images/Hector lavoe1.jpg" alt="hector lavoe photo">
 
      </div>
  </div> 
