--- a/index.html
+++ b/index.html
@@ -11,9 +11,12 @@
  <div id="main">
      <h1 id="title">Hector Lavoe</h1>
      <div id="img-div">
-         <img src="images/Hector lavoe1.jpg" alt="hector lavoe photo">
+         <img src="images/Hector lavoe1.jpg" alt="hector lavoe photo" id="image">
+         <p id="img-caption"><em>The best Salsa singer of all the time.</em></p>
+    </div>
+    <div id="tribute-info">
 
-     </div>
+    </div>
  </div> 
 </body>
 </html>
