added more code

--- a/index.html
+++ b/index.html
@@ -14,103 +14,106 @@
          <img src="images/Hector lavoe1.jpg" alt="hector lavoe photo" id="image">
          <p id="img-caption"><em>The best Salsa singer of all the time.</em></p>
     </div>
+    <br>
     <div id="tribute-info">
         <p>
-            <p>El Cantante - Hector Lavoe
-           
-            <p>Yo, soy el cantante
-            <p>Que hoy han venido a escuchar
-            <p>Lo mejor, del repertorio
-            <p>A ustedes voy a brindar
-            <p>Y canto a la vida
-            <p>De risas y penas
-            <p>De momentos malos
-            <p>Y de cosas buenas
-            <p>Vinieron a divertirse
-            <p>Y pagaron en la puerta
-            <p>No hay tiempo para tristezas
-            <p>Vamos cantante, comienza
-            <p>Eh, le le, le le
-            <p>Me paran, siempre en la calle
-            <p>Mucha gente que comenta
-            <p>¡Oye hector, ha! tú estás hecho
-            <p>Siempre con hembras y en fiestas
-            <p>Y nadie pregunta
-            <p>Si sufro, si lloro
-            <p>Si tengo una pena
-            <p>Que hiere muy hondo
-            <p>Yo soy el cantante
-            <p>Por qué lo mío es cantar
-            <p>Y el público paga
-            <p>Para poderme escuchar
-            <p>Eh le le
-            <p>Yo, soy el cantante
-            <p>Muy popular donde quiera
-            <p>Pero cuando el show se acaba
-            <p>Soy otro humano cualquiera
-            <p>Y sigo mi vida
-            <p>Con risas y penas
-            <p>Con ratos amargos
-            <p>Y con cosas buenas
-            <p>Yo soy el cantante
-            <p>Y me negocio es cantar
-            <p>Y a los que me siguen
-            <p>Mi canción voy a brindar
-            <p>Son mejor que los de ayer, comparenme criticones
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Si no me quieren en vida, cuando muera no me lloren
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Yo te canto de la vida olvida tus penas y tus dolores
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Baila si quieres bailar, canta si quieres cantar, mamá
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Yo soy el cantante, vamo' a celebrar
-            <p>No quiero tristezas lo mío es cantar, cantar
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>El pregón de la montaña esas sí, que eran canciones
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Oh, le, lo, la, la, a, la, la, la, ah-ah-ah
-            <p>Escucha mi pregón que dice
-            <p>Lo, le, lo, la, le, lo, la, la, la, la, le, le, le, la, la, la
-            <p>No es tan fácil el cantar, como creen cierto' señores
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>La vida me ha dado todo, desengaños e ilusiones
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Un saludo a mi contrario, mando yo también merecen honores
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Al mundo estremezco yo preparence bailadores
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Cantando olvido las penas y también los sinsabores
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Escucha bien ese toro, dice todo sí, señores
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Ay quienes cantan con falda, yo canto con pantalones
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Vamos a ser una descarga, con los cantantes mejores
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Mi saludo a Celia, Rivera, Feliciano esos son grandes cantores
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Ellos cantan de verdad ellos, siempre ponen a gozar a la gente
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Escuchen bien su cantar, aprendan de los mejores
-            <p>(Hoy te dedico, mis mejores pregones)
-            <p>Eh, le le, le le, le le
-            <p>Le le, le le, le le
-            <p>Venga aquí, vamo' a bailar
-            <p>Que todos somos hermanos
-            <p>Lo bailan en Venezuela
-            <p>Lo bailan en Panamá
-            <p>Este ritmo es africano
-            <p>Y donde quiera va a acabar
-            <p>, qué bueno es
-            <p>(Chechecotiza), muerto de la risa
-            <p>(Toquizalanga) ay toquizalanga
-            <p>(Cacachilanga) eh, serena es la pirata
-            <p>(Aie, ie) Aie, ven, ven, tú lo ves
-            <p>, merecumbé
-            <p>(Chechecotiza), muerto de la        
+            <p><b>El Cantante - Hector Lavoe</b></p>
+            <p>Yo, soy el cantante</p>
+            <p>Que hoy han venido a escuchar</p>
+            <p>Lo mejor, del repertorio</p>
+            <p>A ustedes voy a brindar</p>
+            <p>Y canto a la vida</p>
+            <p>De risas y penas</p>
+            <p>De momentos malos</p>
+            <p>Y de cosas buenas</p>
+            <p>Vinieron a divertirse</p>
+            <p>Y pagaron en la puerta</p>
+            <p>No hay tiempo para tristezas</p>
+            <p>Vamos cantante, comienza</p>
+            <p>Eh, le le, le le</p>
+            <p>Me paran, siempre en la calle</p>
+            <p>Mucha gente que comenta</p>
+            <p>¡Oye hector, ha! tú estás hecho</p>
+            <p>Siempre con hembras y en fiestas</p>
+            <p>Y nadie pregunta</p>
+            <p>Si sufro, si lloro</p>
+            <p>Si tengo una pena</p>
+            <p>Que hiere muy hondo</p>
+            <p>Yo soy el cantante</p>
+            <p>Por qué lo mío es cantar</p>
+            <p>Y el público paga</p>
+            <p>Para poderme escuchar</p>
+            <p>Eh le le</p>
+            <p>Yo, soy el cantante</p>
+            <p>Muy popular donde quiera</p>
+            <p>Pero cuando el show se acaba</p>
+            <p>Soy otro humano cualquiera</p>
+            <p>Y sigo mi vida</p>
+            <p>Con risas y penas</p>
+            <p>Con ratos amargos</p>
+            <p>Y con cosas buenas</p>
+            <p>Yo soy el cantante</p>
+            <p>Y me negocio es cantar</p>
+            <p>Y a los que me siguen</p>
+            <p>Mi canción voy a brindar</p>
+            <p>Son mejor que los de ayer, comparenme criticones</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Si no me quieren en vida, cuando muera no me lloren</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Yo te canto de la vida olvida tus penas y tus dolores</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Baila si quieres bailar, canta si quieres cantar, mamá</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Yo soy el cantante, vamo' a celebrar</p>
+            <p>No quiero tristezas lo mío es cantar, cantar</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>El pregón de la montaña esas sí, que eran canciones</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Oh, le, lo, la, la, a, la, la, la, ah-ah-ah</p>
+            <p>Escucha mi pregón que dice</p>
+            <p>Lo, le, lo, la, le, lo, la, la, la, la, le, le, le, la, la, la</p>
+            <p>No es tan fácil el cantar, como creen cierto' señores</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>La vida me ha dado todo, desengaños e ilusiones</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Un saludo a mi contrario, mando yo también merecen honores</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Al mundo estremezco yo preparence bailadores</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Cantando olvido las penas y también los sinsabores</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Escucha bien ese toro, dice todo sí, señores</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Ay quienes cantan con falda, yo canto con pantalones</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Vamos a ser una descarga, con los cantantes mejores</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Mi saludo a Celia, Rivera, Feliciano esos son grandes cantores</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Ellos cantan de verdad ellos, siempre ponen a gozar a la gente</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Escuchen bien su cantar, aprendan de los mejores</p>
+            <p>(Hoy te dedico, mis mejores pregones)</p>
+            <p>Eh, le le, le le, le le</p>
+            <p>Le le, le le, le le</p>
+            <p>Venga aquí, vamo' a bailar</p>
+            <p>Que todos somos hermanos</p>
+            <p>Lo bailan en Venezuela</p>
+            <p>Lo bailan en Panamá</p>
+            <p>Este ritmo es africano</p>
+            <p>Y donde quiera va a acabar</p>
+            <p>, qué bueno es</p>
+            <p>(Chechecotiza), muerto de la risa</p>
+            <p>(Toquizalanga) ay toquizalanga</p>
+            <p>(Cacachilanga) eh, serena es la pirata</p>
+            <p>(Aie, ie) Aie, ven, ven, tú lo ves</p>
+            <p>, merecumbé</p>
+            <p>(Chechecotiza), muerto de la</p>        
         </p>
     </div>
+    <a href="https://en.wikipedia.org/wiki/H%C3%A9ctor_Lavoe" target="_blank">learn more about Hector Lavoe (English)</a>
+    <br>
+    <a href="https://es.wikipedia.org/wiki/H%C3%A9ctor_Lavoe" target="_blank">Learn more about Hector Lavoe (Spanish)</a>
  </div> 
 </body>
 </html>
