--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
             <p>(Chechecotiza), muerto de la</p>        
         </p>
     </div>
-    <a href="https://en.wikipedia.org/wiki/H%C3%A9ctor_Lavoe" target="_blank">learn more about Hector Lavoe (English)</a>
+    <a href="https://en.wikipedia.org/wiki/H%C3%A9ctor_Lavoe" target="_blank" id="tribute-link">learn more about Hector Lavoe (English)</a>
     <br>
-    <a href="https://es.wikipedia.org/wiki/H%C3%A9ctor_Lavoe" target="_blank">Learn more about Hector Lavoe (Spanish)</a>
+    <a href="https://es.wikipedia.org/wiki/H%C3%A9ctor_Lavoe" target="_blank" id="tribute-link">Learn more about Hector Lavoe (Spanish)</a>
  </div> 
 </body>
 </html>
