modified the address

--- a/index.html
+++ b/index.html
@@ -116,5 +116,5 @@
     <a href="https://es.wikipedia.org/wiki/H%C3%A9ctor_Lavoe" target="_blank" id="tribute-link">Learn more about Hector Lavoe (Spanish)</a>
  </div> 
 </body>
-<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js."></script>
+<script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js"></script>
 </html>
