adding more code

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
      <h1 id="title">Hector Lavoe</h1>
      <div id="img-div">
          <img src="images/Hector lavoe1.jpg" alt="hector lavoe photo" id="image">
-         <p id="img-caption"><em>The best Salsa singer of all the time.</em></p>
+         <p id="img-caption"><em>El cantante de los cantantes</em></p>
     </div>
     <br>
     <div id="tribute-info">
