--- a/index.html
+++ b/index.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="style.css" type="text/css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet"> 
     
 </head>
 <body>
-    <div id="header">
-        <div class="image">
-            <img src="/images/hector-lavoe2.jpg" alt="photo-of-hector-lavoe">
-            
+    <div id="main">
+        <div class="header">
+            <h1>Hector Lavoe</h1>
+            <h3>El Cantante De Los Cantantes</h3>
+            <img src="images/hector-lavoe2.jpg">
         </div>
 
     </div>
