--- a/index.html
+++ b/index.html
@@ -19,6 +19,14 @@
             <img src="images/hector-lavoe2.jpg">
         </div>
 
+        <div class="text">
+            <p>Héctor Juan Pérez Martínez conocido como Héctor Lavoe fue un compositor y cantante de salsa reconocido por la calidad de su música y su personalidad única a la hora de componer y cantar, llevándolo a tener una carrera musical exitosa durante los años 1970 y 1980. Nació el 30 de septiembre de 1946 en el municipio autónomo de Ponce localizado en Puerto Rico. Se hace en una familia de escasos recursos conformada por su madre francisca Martínez llamada también panchita, su hermana Priscilla y su padre Luis Pérez a quien llamaban lucho, donde empezó a formarse como persona. Cuando solo tenía 3 años de edad su madre falleció, lo cual fue uno de los mayores golpes en la vida del cantante.
+Desde muy pequeño su padre le inculcó el amor por la música, tanto así que a los 14 años ya daba pequeños conciertos en su pueblo natal, los cuales se le remuneraban con una suma aproximada de 18 dólares por noche con los cuales contribuía a las necesidades de su casa. En vista de que la economía en su familia tenía dificultades y con miras a cumplir su sueño de hacer dinero y ser famoso, a los 16 años Héctor decidió irse a New York acompañado por su hermana Priscilla. Ya en New York, Héctor se enfocó a buscar empleos varios donde realizaba labores de mensajero, maletero, pintor y mesero para conseguir algo de dinero; tiempo después se encontró con un amigo de infancia llamado Roberto García quien lo llevaba a discotecas, salones de baile y música latina en los barrios bajo Manhattan y el Bronx donde poco a poco empezó a ser reconocido por la calidad de su música. En el año 1965 el cantante de los cantantes grabó su primer sencillo llamado “Mi china me botó” en conjunto con la New Yorker band, esta canción hizo parte del álbum Está de Bala, grabado bajo el sello musical SMC. Héctor permaneció unos cuantos años más en esta banda tocando las maracas y haciendo algunos coros y simultáneamente también cantaba en otras bandas de la ciudad como lo eran: alegre all stars y Francisco “kako” Bastar y su orquesta donde conoció a Johnny Pacheco y a Willie Colón, siendo el segundo la persona con quien pronto empezaría a grabar. Desde que empezó su dupla musical, Héctor Lavoe y Willie Colón lograron grabar once canciones las cuales se destacaron en los álbumes The good, the bad and the ugly y Vigilante.
+
+            </p>
+
+        </div>
+
     </div>
  
 
